fix project card techs overlap issue

--- a/src/app/shared/components/project/project.component.scss
+++ b/src/app/shared/components/project/project.component.scss
@@ -22,6 +22,7 @@
     width: 100%;
     display: flex;
     flex: row;
+    flex-wrap: wrap;
     margin: 2rem 0;
     &--tech {
       padding: 0.5rem 1rem;
